small correction scss variable name

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,19 +50,19 @@ $custom-orange: (
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$firestarter-primary: mat-palette($custom-orange);
-$firestarter-accent: mat-palette($mat-green, A200, A100, A400);
+$angular-project01-primary: mat-palette($custom-orange);
+$angular-project01-accent: mat-palette($mat-green, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$firestarter-warn: mat-palette($mat-red);
+$angular-project01-warn: mat-palette($mat-red);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$firestarter-theme: mat-dark-theme($firestarter-primary, $firestarter-accent, $firestarter-warn);
+$angular-project01-theme: mat-dark-theme($firestarter-primary, $firestarter-accent, $firestarter-warn);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($firestarter-theme);
+@include angular-material-theme($angular-project01-theme);
 
 /* You can add global styles to this file, and also import other style files */
 
