removed unused code, altered form css

--- a/src/app/user/email-login/email-login.component.scss
+++ b/src/app/user/email-login/email-login.component.scss
@@ -1,29 +1,25 @@
 mat-card {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
-    margin: 0 auto;
-  }
-  
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+  margin: 0 auto;
+}
+
 mat-form-field {
-      width: 100%;
-      margin-bottom: 16px;
+    width: 100%;
+    margin-bottom: 42px;
 }
 
 .server-error {
-    margin: 8px 0;;
+  margin: 8px 0;;
 }
 
-
 input {    
-    height: 2em;              
-    div.mat-form-field-infix {
-      padding: .3em 0;
-      input.mat-input-element {
-        vertical-align: top;
-      }
-    }
-  }
-  div.mat-form-field-wrapper{
-    padding-bottom: 1.15em;
-  }
+  height: 2em;   
+  vertical-align: top;           
+  padding-top: 1.2rem;
+}
+
+div.mat-form-field-wrapper{
+  padding-bottom: 1.15em;
+}
