--- a/src/styles.scss
+++ b/src/styles.scss
@@ -57,7 +57,7 @@ $angular-project01-accent: mat-palette($mat-green, A200, A100, A400);
 $angular-project01-warn: mat-palette($mat-red);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$angular-project01-theme: mat-dark-theme($firestarter-primary, $firestarter-accent, $firestarter-warn);
+$angular-project01-theme: mat-dark-theme($angular-project01-primary, $angular-project01-accent, $angular-project01-warn);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
