--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@
 
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@import '~@angular/material/theming';
+@import '@angular/material/theming';
 @import url("https://use.typekit.net/jnq3uxd.css");
 // Plus imports for other components in your app.
 
