--- a/src/app/kanban/board-list/board-list.component.html
+++ b/src/app/kanban/board-list/board-list.component.html
@@ -9,12 +9,6 @@
   </app-board>
 
   <div class="board-button">
-    <button
-      mat-raised-button
-      color="accent"
-      cdkDragDisabled
-    >
-      New Board
-    </button>
+    <button mat-raised-button color="accent" cdkDragDisabled>New Board</button>
   </div>
 </div>
