--- a/src/app/user/email-login/email-login.component.scss
+++ b/src/app/user/email-login/email-login.component.scss
@@ -6,20 +6,20 @@ mat-card {
 }
 
 mat-form-field {
-    width: 100%;
-    margin-bottom: 42px;
+  width: 100%;
+  margin-bottom: 42px;
 }
 
 .server-error {
-  margin: 8px 0;;
+  margin: 8px 0;
 }
 
-input {    
-  height: 2em;   
-  vertical-align: top;           
+input {
+  height: 2em;
+  vertical-align: top;
   padding-top: 1.2rem;
 }
 
-div.mat-form-field-wrapper{
+div.mat-form-field-wrapper {
   padding-bottom: 1.15em;
 }
