firebase 9 and angular/fire lastest version setup and running

--- a/src/app/user/login-page/login-page.component.html
+++ b/src/app/user/login-page/login-page.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!(afAuth.authState | async)">
+<div *ngIf="(afAuth.authState | async) === null">
   <h1>Login</h1>
 
   <button mat-raised-button appGoogleSignin>
