--- a/src/app/kanban/boards-list/boards-list.component.html
+++ b/src/app/kanban/boards-list/boards-list.component.html
@@ -9,6 +9,6 @@
   </app-board>
 
   <div class="board-button">
-    <button mat-raised-button color="accent" cdkDragDisabled>New Board</button>
+    <button (click)="openBoardDialog()" mat-raised-button color="accent" cdkDragDisabled>New Board</button>
   </div>
 </div>
