--- a/src/app/kanban/boards-list/boards-list.component.scss
+++ b/src/app/kanban/boards-list/boards-list.component.scss
@@ -6,10 +6,10 @@
   overflow-x: scroll;
   &::-webkit-scrollbar {
     height: 4px;
-    width: 4px;
+    width: 4px
   }
   &::-webkit-scrollbar-track {
-    //    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+//    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     background-color: #000;
   }
   &::-webkit-scrollbar {
@@ -21,7 +21,7 @@
     background-color: #f5f5f5;
     border: 2px solid #555555;
   }
-
+  
   .handle {
     position: relative;
     top: 5px;
@@ -30,11 +30,13 @@
   }
 }
 
+
 .cdk-drag-placeholder {
   opacity: 0.2;
   width: 350px;
   border: 5px dashed gray;
   margin: 0 10px;
+  
 }
 
 .cdk-drag-animating {
@@ -44,6 +46,7 @@
 .boards.cdk-drop-list-dragging .cdk-drag {
   transition: transform 300ms ease;
 }
+
 
 .board-button {
   display: flex;
