--- a/src/app/customers/detail-page/detail-page.component.html
+++ b/src/app/customers/detail-page/detail-page.component.html
@@ -4,7 +4,7 @@
 <mat-card>
         <p>This content is server rendered with Angular Universal, NestJS, and Google Cloud Run.</p>  
 
-        Paste URL: <pre>https://firestarter.fireship.io/customers/{{customerId}}</pre>
+        Paste URL: <pre>http://localhost:4200/customers/{{customerId}}</pre>
 
         <a href="https://cards-dev.twitter.com/validator" target="blank" mat-stroked-button color="accent">Twitter Card Validator</a>
 
